# pandas-manipulando-dados-com-python

./: README.md
laboratorio/: notas.md
laboratorio/lab-pandas/: pyproject.toml
laboratorio/lab-pandas/src/: politicos.ipynb
workshop-pandas/: .gitignore  README.md
workshop-pandas/codigo/: Começando.ipynb
